# nebius_ho_mlops

./: .env.example  .gitattributes  REPORT.md  docker-compose.yml  pyproject.toml
agent/: graph.py  prompts.py
evals/: run_eval.py
infra/grafana/provisioning/dashboards/: serving.json
results/: eval_after_tuning.json  eval_baseline.json  load_test_10rps.json  load_test_10rps_workers4.json  load_test_30rps.json  load_test_8rps.json
scripts/: h100_runbook.sh  start_vllm.sh
